# python-template

./: .git-blame-ignore-revs  .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml  .yamllint.yaml  bandit.yaml  cspell.json  ruff.toml
docs/: trunk.md
workflows/: ci-cd.yml
